--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "pdfkit": "^0.13.0",
-    "db-migrate": "^0.11.14",
-    "db-migrate-mysql": "^2.3.2"
+    "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2"
   }
 }
